# cliques

./: .gitignore  README.md  clique.py  graph.py  pyproject.toml  util.py  word_node.py
cliques/: __init__.py  clique.py  graph.py  util.py  word_node.py
examples/: main.py
